[package]
name = "tokio-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokio-handshake"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3.25"
anyhow = "1"
url = "2"
thiserror = "1"