[package]
name = "tokio-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokio-handshake"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
anyhow = "1.0.75"
url = "2.4.1"
thiserror = "1.0.49"
secp256k1 = { version = "0.20.3", features = ["recovery", "rand-std"] }
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
educe = { version = "0.4.23", default-features = false, features = ["Clone", "Debug", "Default"] }
discv4 = { git = "https://github.com/vorot93/discv4"}
arrayvec = "0.7.4"
rlp = "0.5.2"